--- a/Server/WCFServer/Tools/ArchorUDPTool/UDPArchorInfoWindow.xaml
+++ b/Server/WCFServer/Tools/ArchorUDPTool/UDPArchorInfoWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ArchorUDPTool.UDPArchorInfoWindow"
+﻿<Window xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"  x:Class="ArchorUDPTool.UDPArchorInfoWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -6,23 +6,30 @@
         xmlns:local="clr-namespace:ArchorUDPTool"
         mc:Ignorable="d"
         Title="基站信息" Height="450" Width="400" Loaded="Window_Loaded">
-    <StackPanel>
-        <Menu>
-            <MenuItem Header="GetAll" Name="MenuGetAll" Click="MenuGetAll_Click"></MenuItem>
-            <MenuItem Header="重启" Name="MenuReset" Click="MenuReset_OnClick"></MenuItem>
-        </Menu>
-        <local:UDPArchorInfoBox x:Name="AibId" Label="Id" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibIp" Label="Ip" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibType" Label="Archor Type" Key="Type" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibServerIp" Label="Server IP" Key="ServerIp" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibServerPort" Label="Server Port" Key="ServerPort" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibMask" Label="子网掩码" Key="Mask" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibGateway" Label="网关" Key="Gateway" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibDHCP" Label="DHCP" Key="DHCP" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibSoftVersion" Label="软件版本" Key="SoftVersion" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibHardVersion" Label="硬件版本" Key="HardVersion" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibPower" Label="功率" Key="Power" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        <local:UDPArchorInfoBox x:Name="AibMAC" Label="MAC" Key="MAC" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
-        
-    </StackPanel>
+    <TabControl>
+        <TabItem Header="设置">
+            <StackPanel>
+                <Menu>
+                    <MenuItem Header="GetAll" Name="MenuGetAll" Click="MenuGetAll_Click"></MenuItem>
+                    <MenuItem Header="重启" Name="MenuReset" Click="MenuReset_OnClick"></MenuItem>
+                </Menu>
+                <local:UDPArchorInfoBox x:Name="AibId" Label="Id" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibIp" Label="Ip" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibType" Label="Archor Type" Key="Type" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibServerIp" Label="Server IP" Key="ServerIp" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibServerPort" Label="Server Port" Key="ServerPort" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibMask" Label="子网掩码" Key="Mask" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibGateway" Label="网关" Key="Gateway" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibDHCP" Label="DHCP" Key="DHCP" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibSoftVersion" Label="软件版本" Key="SoftVersion" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibHardVersion" Label="硬件版本" Key="HardVersion" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibPower" Label="功率" Key="Power" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+                <local:UDPArchorInfoBox x:Name="AibMAC" Label="MAC" Key="MAC" GetEvent="Aib_GetEvent" SetEvent="Aib_SetEvent"/>
+            </StackPanel>
+        </TabItem>
+        <TabItem Header="属性">
+            <xctk:PropertyGrid x:Name="PropertyGrid1"/>
+        </TabItem>
+    </TabControl>
+
 </Window>
