--- a/Server/WebSite/LocationWeb/Views/LocationCard/RoleSet.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCard/RoleSet.cshtml
@@ -7,48 +7,47 @@
 }
 
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    @*<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>*@
     <h2 class="modal-title" id="myModalLabel">RoleSet</h2>
 </div>
 
-<div class="modal-body">
-    <div class="form-horizontal">
-        <table class="table">
+<div class="modal-body">      
+    <table class="table">
+        <tr>
+            <th></th>
+            <th>
+                @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Description)
+            </th>
+        </tr>
+        @foreach (var item in Model)
+        {
             <tr>
-                <th></th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Name)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.Description)
-                </th>
+                <td style="display:none;" class="roleId">
+                    @Html.DisplayFor(modelItem => item.Id)
+                </td>
+                <td>
+                    <input type="radio" name="choose" />
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
             </tr>
+        }
+    </table>
 
-            @foreach (var item in Model)
-            {
-                <tr>
-                    <td>
-                        <input type="radio" name="choose" />
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Name)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.Description)
-                    </td>
-                </tr>
-            }
-        </table>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="button" value="确定" id="btnId" />
-            </div>
+    <div class="form-group">
+        <div class="col-md-offset-2 col-md-10">
+            <input type="button" value="确定" class="btn btn-default" id="btnId" />
         </div>
-       
-        <div>
-            @Html.ActionLink("返 回", "Index")
-        </div>
+    </div>
+    <div>
+        @Html.ActionLink("返 回", "Index")
     </div>
 </div>
 
@@ -60,21 +59,32 @@
 <script src="~/Scripts/toastr.js"></script>
 <script src="~/Scripts/jquery-1.10.2.js"></script>
 
-@*<script type="text/javascript">
+<script type="text/javascript">
+           
     $(function () {
         $("#btnId").click(function () {
-            var choosed = $('input:radio[name="choose"]:checked').val();
+            var choosed = $('input:radio[name="choose"]:checked').val();                           
+
+            //var locationcardId = document.getElementsByClassName('locationcardId');
+            //console.log(locationcardId);
+
+            //var roleId = document.getElementsByClassName('roleId');
+            //console.log(roleId);
+
+            //var roleset = eval('(' + '{"tagId":"' + locationcardId + '","roleId":"' + roleId + '"}' + ')');
+
+            var roleset = eval('(' + '{"tagId":"' + 3 + '","roleId":"' + 3 + '"}' + ')');
             if (choosed == null) {
                 alert("未选择，不修改标签角色！");
                 return false;
             }
             else {
                 $.ajax({                   
-                    type: "post",
+                    type: "Post",
                     url: "LocationCard/SetTagRole",
-                    //data: "{tagId:1,roleId:1}",
-                    data: '{"tagId": "tagId","roleId": "roleId"}',
-                    contentType: "application/json; charset=utf-8",
+                    data: JSON.stringify(roleset),
+                    //data:'{"tagId":"1","roleId":"2"}',
+                    contentType: "application/json",
                     dataType: "json",
                     async: false,
                     success: function (data) {
@@ -85,8 +95,7 @@
                         }
                         else {
                             alert("标签角色设置失败！");
-                        }
-              
+                        }            
                     },
                     error: function (XMLHttpRequest, textStatus, errorThrown) {
                         console.log("error"); 
@@ -99,7 +108,7 @@
             }
         });
     });
-</script>*@
+</script>
 
 
 
