--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -15,6 +15,7 @@
             </MenuItem>
             <MenuItem Header="读取数据">
                 <MenuItem Header="区域" Name="MenuInitTopo" Click="MenuInitTopo_Click"></MenuItem>
+                <MenuItem Header="设备" Name="MenuInitDevs" Click="MenuInitDevs_Click"></MenuItem>
                 <MenuItem Header="区域权限" Name="MenuInitAA" Click="MenuInitAA_OnClick"></MenuItem>
                 <MenuItem Header="实时位置" Name="MenuRealPos" Click="MenuRealPos_OnClick"></MenuItem>
                 <MenuItem Header="人员 标签" Name="MenuPersonAndCard" Click="MenuPersonAndCard_OnClick"></MenuItem>
@@ -31,6 +32,7 @@
                 <MenuItem Header="读取CAD形状" Name="LoadCADShapeList" Click="LoadCADShapeList_Click"></MenuItem>
                 <MenuItem Header="合并部分基站" Name="MenuMergeArchorInfo" Click="MenuMergeArchorInfo_Click"></MenuItem>
                 <MenuItem Header="读取室外基站位置" Name="MenuLoadOutArchorPoints" Click="MenuLoadOutArchorPoints_Click"></MenuItem>
+                <MenuItem Header="保存室外基站位置" Name="MenuSaveOutArchorPoints" Click="MenuSaveOutArchorPoints_Click"></MenuItem>
             </MenuItem>
         </Menu>
         <WPFClientControlLib:ProgressBarEx DockPanel.Dock="Bottom" Name="ProgressBarEx1"/>
