--- a/Server/WebSite/LocationWeb/Views/LocationCard/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCard/Index.cshtml
@@ -67,9 +67,9 @@
         @foreach (var item in Model)
         {
             <tr>
-                <td style="display:none;" class="locationcardId">
+                @*<td style="display:none;" class="locationcardId">
                     @Html.DisplayFor(modelItem => item.Id)
-                </td>
+                </td>*@
                 <td>
                     @Html.DisplayFor(modelItem => item.Code)
                 </td>
