--- a/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
@@ -115,9 +115,19 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="LocationSystem:" id="exe">三维程序</a> 
-                    </li>
-                                                                                                    
+                        <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                            三维程序
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a href="LocationSystem:" id="openExe">启动</a>
+                            </li>
+                            <li>
+                                <a id="downLoading">下载</a>
+                            </li>                            
+                        </ul>
+                    </li>                                                                                                                       
                 </ul>
                              
                 @Html.Partial("_LoginPartial")
@@ -137,7 +147,6 @@
     @Scripts.Render("~/bundles/jqueryajax")
     @RenderSection("scripts", required: false)
 
-    @*<script src="~/Scripts/jquery-1.10.2.js"></script>*@
     <script src="~/Scripts/LocationSystem.js"></script>
     <script src="~/Scripts/protocolcheck.js"></script>
     
