在公司做的修改

--- a/Server/WebSite/LocationWeb/Views/AreaAuthorizationRecord/Edit.cshtml
+++ b/Server/WebSite/LocationWeb/Views/AreaAuthorizationRecord/Edit.cshtml
@@ -5,7 +5,7 @@
 }
 
 <div class="modal-header">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+    @*<button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>*@
     <h2 class="modal-title" id="myModalLabel">Edit</h2>
 </div>
 
@@ -98,6 +98,10 @@
                 @Html.LabelFor(model => model.AreaId, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
                     @Html.DropDownListFor(model => model.AreaId, ViewBag.PtList as IEnumerable<SelectListItem>, "", 1)
+                    <a id="menuBtn" href="#" onclick="showMenu(); return false;">选择</a>
+                    <div id="menuContent" class="menuContent">
+                        <ul id="treeDemo" class="ztree" style="border: 1px solid #000; background: #fff; width:180px; height:160px; overflow:auto;"></ul>
+                    </div>  
                     @Html.ValidationMessageFor(model => model.AreaId, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -135,7 +139,95 @@
     @Scripts.Render("~/bundles/jqueryval")
 }
 
+<style type="text/css">
+    #AreaId {
+        border: 1px solid #000;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        pointer-events: none;
+    }
+
+    #menuContent {
+        display:none;
+        position: absolute;
+        z-index: 99;
+    }
+
+    .ztree li ul{
+        width:260px;
+    }
+</style>
+
+
+
 <link href="~/Content/toastr.css" rel="stylesheet" />
 <script src="~/Scripts/toastr.js"></script>
-
 <script src="~/Scripts/editmodal.js"></script>
+
+<link href="~/Content/metroStyle.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-1.4.4.min.js"></script>
+<script src="~/Scripts/jquery.ztree.core.js"></script>
+
+<script type="text/javascript">
+    var setting = {
+        view:{
+            dblClickExpand: false,
+            showLine: false
+        },
+        data:{
+            simpleData:{
+                enable:true
+            }
+        },
+        callback:{
+            beforeClick:beforeClick,
+            onClick:onClick
+        }
+    };
+    var zNodes = [];
+    $.ajax({
+        type: "GET",
+        url: "/AreaAuthorizationRecord/GetPartAreaList",
+        dataType: "json",
+        async: false,
+        //contentType: "application/json",
+        success: function (data) {
+            zNodes = data;
+        }
+    })
+
+    function beforeClick(treeId, treeNode) {
+        var isChecked = (treeNode || treeNode.isParent)
+        return isChecked;
+    }
+
+    function onClick(e, treeId, treeNode) {
+        var zTree = $.fn.zTree.getZTreeObj("treeDemo");
+        var nodes = zTree.getSelectedNodes();
+        if (nodes.length > 0) {
+            var node = nodes[0];
+            var id = node.id;
+            $("#AreaId").val(id);
+        }
+    }
+
+    function showMenu() {
+        $("#menuContent").slideDown("fast");
+        $("body").bind("mousedown", onBodyDown);
+    }
+
+    function hideMenu() {
+        $("#menuContent").fadeOut("fast");
+        $("body").unbind("mousedown", onBodyDown);
+    }
+
+    function onBodyDown(event) {
+        if (!(event.target.id == "menuBtn" || event.target.id == "menuContent" || $(event.target).parents("#menuContent").length > 0)) {
+            hideMenu();
+        }
+    }
+
+    $(document).ready(function () {
+        $.fn.zTree.init($("#treeDemo"), setting, zNodes);
+    });
+</script>
