--- a/Server/WebSite/LocationWeb/Views/DevType/Delete.cshtml
+++ b/Server/WebSite/LocationWeb/Views/DevType/Delete.cshtml
@@ -50,6 +50,14 @@
                     @Html.DisplayFor(model => model.FrontElevation)
                 </dd>
 
+                <dt>
+                    @Html.DisplayNameFor(model => model.Manufactor)
+                </dt>
+
+                <dd>
+                    @Html.DisplayFor(model => model.Manufactor)
+                </dd>
+
             </dl>
 
             <div class="form-group">
