--- a/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
@@ -52,9 +52,10 @@
                             <li>@Html.ActionLink("区域列表", "Index", "Area")</li>
                             <li>@Html.ActionLink("区域树", "Tree", "Area")</li>
                             <li>@Html.ActionLink("区域权限", "Index", "AreaAuthorization")</li>
+                            <li>@Html.ActionLink("设备信息", "Index", "DevInfo")</li>
                             <li>@Html.ActionLink("设备模型", "Index", "DevModel")</li>
                             <li>@Html.ActionLink("设备类型", "Index", "DevType")</li>
-                            <li>@Html.ActionLink("设备告警", "Index", "Alarms")</li>
+                            <li>@Html.ActionLink("设备告警", "Index", "Alarms")</li>                            
                         </ul>
                     </li>
                     <li>
